--- a/skeleton.html
+++ b/skeleton.html
@@ -7,7 +7,7 @@
     content="https://cdn.discordapp.com/attachments/1024557710856962069/1048297211181674506/caption.gif">
   <meta property="og:type" content="video.other">
   <meta property="og:video:url"
-    content="https://cdn.discordapp.com/attachments/1024557710856962069/1048298085454970921/ezgif-2-797e0a67b8.mp4">
+    content="https://cdn.discordapp.com/attachments/530916324420091924/1048727927921049711/the-terminator-wins-yt-5s.com.mp4">
   <meta property="og:video:height" content="202">
   <meta property="og:video:width" content="250">
 </head>
