--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
   <body>
-Links:
+    <h1>Links:</h1>
     
-https://discord37.vercel.app/amongus.html
-
-https://discord37.vercel.app/skeleton.html
-
-https://discord37.vercel.app/the-rock.html
+<h1>https://discord37.vercel.app/amongus.html</h1>
+<h1></h1>
+<h1>https://discord37.vercel.app/skeleton.html</h1>
+<h1></h1>
+<h1>https://discord37.vercel.app/the-rock.html</h1>
     
   </body>
   </head>
