--- a/amongus.html
+++ b/amongus.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  sex
+<meta http-equiv="refresh" content="3;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </body>
 
 </html>
