--- a/amongus.html
+++ b/amongus.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:image" content="/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
   <meta property="og:type" content="video.other">
-  <meta property="og:video:url" content="https://discord37.vercel.app/IMG_5699.mov">
+  <meta property="og:video:url" content="/IMG_5699.mov">
   <meta property="og:video:height" content="260">
   <meta property="og:video:width" content="261">
 </head>
