--- a/skeleton.html
+++ b/skeleton.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  👀
+<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </body>
 
 </html>
