--- a/the-rock.html
+++ b/the-rock.html
@@ -1,21 +1,6 @@
 
 <!doctype html>
 <html>
-<!--
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣄⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⣤⣤⣤⣀⠀⠀⠀⠀⠀⠀⠘⣿⣦⣤⡀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣷⣦⣀⠀⠀⠀⣰⣿⣿⣿⣷⡄
-⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣾⣿⣿⠛⠛⠛⠛
-⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇
-⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣻⣿⠟
-⠀⠀⠀⠀⠀⠀⣸⣿⣿⠏⠀⣿⣿⣿⣿⣿⣿⠛⠿⠿⠛⢁⣿⡏
-⠀⠀⠀⠀⠀⢰⣿⣿⡏⠀⠀⢿⣿⣿⣿⣿⠇⠀⠀⠀⠀⠾⠛
-⠀⠀⠀⠀⢠⣿⣿⠏⠀⠀⠀⢸⣿⣿⡿⠋
-⠐⢦⣤⣴⣿⡿⠋⠀⠀⠀⢠⣾⡿⠋
-⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⣸⣿⠁
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⡟
-⠀⠀⠀⠀⠀⠀⠀⠀⠐⠿⠟
--->
 <head>
     <meta charset="UTF-8">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/530916324420091924/1048734335399903302/rock.gif">
@@ -24,5 +9,7 @@
     <meta property="og:video:width" content="176">
     <meta property="og:video:height" content="144">
 </head>
-<body>👀</body>
+<body>
+<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+</body>
 </html>
