--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <body>
-    <h1>Links:</h1>
-    
-<h1>https://discord37.vercel.app/amongus.html</h1>
-<h1></h1>
-<h1>https://discord37.vercel.app/skeleton.html</h1>
-<h1></h1>
-<h1>https://discord37.vercel.app/the-rock.html</h1>
-    <h1>Make undownload</h1>
-<h1>https://onlinetexttools.com/url-decode-text</h1>
-    
-  </body>
-  </head>
+</head>
+<body>
+<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+</body>
+</html>
