--- a/amongus/index.html
+++ b/amongus/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta property="og:image" content="./amongus/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
+  <meta property="og:image" content="3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
   <meta property="og:type" content="video.other">
   <meta property="og:video:url" content="/IMG_5699.mov">
   <meta property="og:video:height" content="260">
