--- a/37/index.html
+++ b/37/index.html
@@ -14,6 +14,7 @@
     <h1>Make link invisible</h1>
     <h1>https://discord37.vercel.app/invisible</h1>
     <h1> <A HREF="/37/index.html"> Poczta </A> </h1>
+    <h1> <A HREF="/invisible"> Make link invisible </A> </h1>
     <h1></h1>
     <h1></h1>
     <h1></h1>
