--- a/amongus/index.html
+++ b/amongus/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta property="og:image" content="https://discord37.vercel.app/amongus/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
+
+  
+  <head>
+  <meta property="og:image"
+    content="https://discord37.vercel.app/amongus/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
   <meta property="og:type" content="video.other">
-  <meta property="og:video:url" content="https://discord37.vercel.app/amongus/IMG_5699.mov">
-  <meta property="og:video:height" content="260">
-  <meta property="og:video:width" content="261">
+  <meta property="og:video:url"
+    content="https://discord37.vercel.app/amongus/IMG_5699.mov">
+  <meta property="og:video:height" content="202">
+  <meta property="og:video:width" content="250">
 </head>
+  
+  
 
 <body>
 <meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
