--- a/amongus/index.html
+++ b/amongus/index.html
@@ -4,11 +4,9 @@
 
   
   <head>
-  <meta property="og:image"
-    content="https://discord37.vercel.app/amongus/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
-  <meta property="og:type" content="video.other">
-  <meta property="og:video:url"
-    content="https://discord37.vercel.app/amongus/IMG_5699.mov">
+<meta property="og:image" content="https://www.giforvideo.ml/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
+<meta property="og:type" content="video.other">
+<meta property="og:video:url" content="https://www.giforvideo.ml/IMG_5699.MOV">
   <meta property="og:video:height" content="300">
   <meta property="og:video:width" content="300">
 </head>
