--- a/amongus/index.html
+++ b/amongus/index.html
@@ -1,6 +1,6 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
 <meta property="og:image" content="https://www.giforvideo.ml/3AD490BF-0995-4EAC-81E2-AEBB7815BCE2.gif">
 <meta property="og:type" content="video.other">
@@ -8,9 +8,7 @@
 <meta property="og:video:height" content="128000">
 <meta property="og:video:width" content="128000">
 </head>
-
 <body>
-<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+sex
 </body>
-
 </html>
