--- a/amongus/index.html
+++ b/amongus/index.html
@@ -9,6 +9,6 @@
 <meta property="og:video:width" content="128000">
 </head>
 <body>
-sex
-</body>
+<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+</body
 </html>
